[gd_scene load_steps=3 format=3 uid="uid://cybrmn8dl81oi"]

[ext_resource type="Script" path="res://Scenes/_Globals/actionable.gd" id="1_p1yln"]

[sub_resource type="CircleShape2D" id="CircleShape2D_djv6r"]
radius = 14.0

[node name="Actionable" type="Area2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_p1yln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_djv6r")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
